# valorpredict

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  train_model.py  train_strategy_model.py
.github/workflows/: ci.yml
.streamlit/: config.toml
artifacts/: strategy_model.joblib  valorpredict_model.joblib
data/: valorant_matches.csv
docs/: architecture.md  deployment.md
reports/: data_quality_report.md  metrics.json  model_comparison.csv  model_report.md  pre_match_model_card.md  strategy_calibration.csv  strategy_calibration_report.md  strategy_model_card.md  strategy_model_comparison.csv  strategy_model_report.md
scripts/: generate_project_assets.py  prepare_vct_dataset.py
src/valorpredict/: __init__.py  features.py  strategy_modeling.py  vct_modeling.py
tests/: test_pipeline.py
