[project]
name = "valorpredict"
version = "0.2.0"
description = "A reproducible Valorant match outcome prediction prototype with data quality reporting and a Streamlit dashboard."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "joblib>=1.3",
  "pandas>=2.0",
  "scikit-learn>=1.4",
  "streamlit>=1.32",
]

[tool.setuptools.packages.find]
where = ["src"]
