[project]
name = "valorpredict"
version = "0.2.0"
description = "A Streamlit analytics app for Valorant lineup strategy, kill-target simulation, and VCT model benchmarking."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "joblib>=1.3",
  "kagglehub>=1.0",
  "pandas>=2.0",
  "scikit-learn==1.6.1",
  "streamlit>=1.32",
]

[tool.setuptools.packages.find]
where = ["src"]
